--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "dev": "APP_VARIANT=development npx expo start"
   },
   "jest": {
     "preset": "jest-expo"
@@ -42,7 +43,9 @@
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
     "react-syntax-highlighter": "^15.5.0",
-    "toastify-react-native": "^5.0.0"
+    "toastify-react-native": "^5.0.0",
+    "expo-dev-client": "~4.0.20",
+    "expo-updates": "~0.25.21"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
