--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   "dependencies": {
     "@clerk/clerk-expo": "^1.2.6",
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
     "@supabase/supabase-js": "^2.44.4",
-    "expo": "~51.0.20",
+    "expo": "~51.0.22",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.8",
     "expo-linking": "~6.3.1",
@@ -39,7 +39,7 @@
     "react-native-paper": "^5.12.3",
     "react-native-paper-select": "^1.1.1",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
     "react-syntax-highlighter": "^15.5.0",
