--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@clerk/clerk-expo": "^1.2.6",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
-    "@supabase/supabase-js": "^2.44.4",
+    "convex": "^1.16.2",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.23",
